[package]
name = "BingWallpaper"
version = "0.1.1"
edition = "2024"

[dependencies]
tray-icon = "0.20.1"
winit = "0.30.9"
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging"] }
reqwest = { version = "0.12.15", features = ["json"] }
tempfile = "3.19.1"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
image = "0.25.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
