[package]
name = "BingWallpaper"
version = "0.1.4"
edition = "2024"

[dependencies]
tray-icon = "0.21.1"
winit = "0.30.12"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
reqwest = { version = "0.12.24", features = ["json"] }
tempfile = "3.23.0"
serde = "1.0.228"
tokio = { version = "1.47.2", features = ["full"] }
image = "0.25.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-appender = "0.2"
time = "0.3"
